<resources>
    <string name="app_name">Agilility Booster</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome!</string>
    <string name="Continue">Continue</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_passwords_not_match">The passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to countdown -->
    <string name="zero">00</string>
    <string name="startCount">Start Countdown</string>
    <string name="stopCount">Stop Countdown</string>
    <string name="CountdownActivity">Countdown</string>
    <!-- Strings related to taskListActivity -->
    <string name="lastListDeleteInfo">Click and hold a\n\ task to delete it</string>

    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="register_successful">Registering successfully completed!</string>

</resources>
